# VLM

./: .gitignore  2.5 ye phd plan.md  PhD_Research_Questions_Roadmap.docx  README.md  Research design.md  Research questions.md  Study_1_GI_VQA_Faithfulness_Pipeline.ipynb  Task_1_Sample_Notebook-2026.ipynb  Task_1_Sample_Notebook.ipynb  convert_to_word.py  gantt chart.ipynb  hf_config.yml  progress_report.docx  progress_report.md  requirements.txt
gi_vqa_research/: .dockerignore  .env.example  .gitignore  MIGRATION.md  Makefile  README.md  pyproject.toml
gi_vqa_research/artifacts/: README.md
gi_vqa_research/data/: README.md
gi_vqa_research/docker/: Dockerfile.gpu
gi_vqa_research/notebooks/: 00_colab_t4_backend_contract.ipynb  01_colab_t4_training_gate.ipynb  02_colab_t4_development_smoke.ipynb  03_colab_t4_controlled_training_pilot.ipynb  README.md
gi_vqa_research/requirements/: README.md
gi_vqa_research/runs/: README.md
gi_vqa_research/schemas/: run_manifest.schema.json
gi_vqa_research/scripts/: audit_splits.py  capture_run_manifest.py
gi_vqa_research/tests/: test_audit.py  test_backend_base.py  test_cli.py  test_config.py  test_contract.py  test_controlled_evaluation.py  test_controlled_training.py  test_identifiers.py  test_image_cache.py  test_jsonl.py  test_model_spec.py  test_paligemma_backend.py  test_perturbations.py  test_provenance.py  test_shards.py  test_smoke_runner.py  test_splits.py  test_training.py  test_training_gate.py
gi_vqa_research/training_gate_bundle-2/: bootstrap_environment.json  bundle_manifest.json  pip_check.txt  (+3 more)
(+52 files in other folders)
