[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gi-vqa-research"
version = "0.1.0"
description = "Reproducible infrastructure for leakage-safe GI-VQA experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
  "numpy==2.0.2",
  "Pillow==11.3.0",
  "PyYAML==6.0.2",
  "pandas==2.2.2",
  "tqdm==4.67.1",
  "scikit-learn>=1.5,<1.7",
  "nltk==3.9.1",
  "rouge-score==0.1.2",
  "sacrebleu>=2.4,<3",
]

[project.optional-dependencies]
gpu = [
  "accelerate==1.9.0",
  "bitsandbytes==0.47.0",
  "datasets==3.3.2",
  "huggingface-hub==0.34.3",
  "ms-swift==3.7.0",
  "peft==0.16.0",
  "sentencepiece==0.2.0",
  "transformers==4.55.0",
  "wandb==0.21.0",
]
dev = [
  "ipykernel>=6.29,<7",
  "jupyter>=1.1,<2",
  "pytest>=8,<9",
  "ruff>=0.12,<0.13",
]

[project.scripts]
gi-vqa = "gi_vqa.cli:main"
gi-vqa-train = "gi_vqa.training:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
